# LLM-TOP

./: .gitattributes  .gitignore  Agents.md  CMakeLists.txt  Grammar.md  IMPROVEMENTS.md  LICENSE  LLM-TOP.slnx  Prompts.md  README.md  benchmarker.cpp  benchmarker_real.cpp  binary_encoder.hpp  chk.hpp  eval_benchmark.py  fallback_recovery.hpp  fuzzer.cpp  json_utils.hpp  llmtop_eval.cpp  llmtop_parse.cpp  llmtop_proxy.py  middleware.hpp  parsed_fallback.json  parser.cpp  parser_v2.hpp  run_compliance_eval.ps1  run_live_eval.ps1  run_live_eval.py  run_live_eval_curl.py  run_live_eval_dual.py  sample.llmtop  sample_corrupt.llmtop  schema_validator.hpp  sha256.hpp  test_binary.cpp  test_harness.hpp  test_harness_selftest.cpp  test_integration.cpp  test_middleware.cpp  test_recovery.cpp  (+6 more)
docs/: Analysis.md  Testing.md  llm_compressed_language_plan.md
docs/audit/: 2026-07-19-analysis-v3.md  2026-07-21-REVIEW.md
docs/superpowers/plans/: 2026-07-22-phase0-test-harness.md
docs/superpowers/specs/: 2026-07-22-audit-remediation-design.md
